--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,12 +33,14 @@
                     android:id="@+id/ivCurrency"
                     android:layout_width="30dp"
                     android:layout_height="match_parent"
+                    android:visibility="invisible"
                     android:layout_marginEnd="20dp"
                     android:layout_toLeftOf="@id/ivChatActive"
                     android:src="@drawable/currency" />
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="wrap_content"
+                    android:visibility="invisible"
                     android:layout_alignParentEnd="true"
                     android:id="@+id/ivChatActive"
                     android:layout_marginEnd="20dp"
@@ -65,6 +67,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/ivOne"
+                android:visibility="invisible"
                 android:text="Furama Riverfront,\nSingapore"
                 android:textSize="24sp"
                 android:fontFamily="@font/esscextrabold"
@@ -81,6 +84,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/tvTwo"
+                android:visibility="invisible"
                 android:text="405 Havelock Road, Singapore 169633"
                 android:layout_marginTop="6dp"
                 app:layout_constraintTop_toBottomOf="@id/tvOne"
@@ -89,6 +93,8 @@
             <ImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
+                android:visibility="invisible"
+                android:id="@+id/ivLocation"
                 android:layout_marginEnd="16dp"
                 android:src="@drawable/currentlocation"
                 app:layout_constraintBottom_toBottomOf="@id/tvTwo"
@@ -104,20 +110,28 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tvTwo"/>
 
-            <TextView
+            <com.aungbophyoe.space.uidesigntest.customUi.ParallelogramTextView
                 android:layout_width="150dp"
                 android:layout_height="40dp"
+                android:layout_gravity="center"
                 android:id="@+id/tvSeeAll"
-                android:text="See All 2/68"
-                android:gravity="center"
-                android:textColor="@color/white"
-                android:textSize="16sp"
-                android:backgroundTint="@color/gray"
-                android:fontFamily="@font/esscmedium"
-                android:background="@drawable/button_shape"
                 app:layout_constraintEnd_toEndOf="@id/ivOne"
                 app:layout_constraintTop_toBottomOf="@id/viewPager"
                 app:layout_constraintBottom_toBottomOf="@id/viewPager"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="See All 2/68"
+                android:textSize="16sp"
+                android:layout_marginStart="10dp"
+                android:fontFamily="@font/esscmedium"
+                android:gravity="center"
+                android:textColor="@color/white"
+                app:layout_constraintStart_toStartOf="@id/tvSeeAll"
+                app:layout_constraintEnd_toEndOf="@id/tvSeeAll"
+                app:layout_constraintTop_toBottomOf="@id/viewPager"
+                app:layout_constraintBottom_toBottomOf="@id/viewPager"/>
+
             <HorizontalScrollView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -224,15 +238,70 @@
                     </LinearLayout>
                 </LinearLayout>
             </HorizontalScrollView>
-            <ImageView
+            <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="40dp"
-                android:layout_margin="16dp"
                 android:id="@+id/ivFlag"
-                android:background="@drawable/byroom_background"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:layout_margin="16dp"
                 app:layout_constraintTop_toBottomOf="@id/hrScroll"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                app:layout_constraintEnd_toEndOf="parent">
+                <RelativeLayout
+                    android:layout_width="170dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginEnd="-10dp">
+
+                    <com.aungbophyoe.space.uidesigntest.customUi.ByRoomBackgroundOn
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/viewBRoomOn"/>
+
+                    <com.aungbophyoe.space.uidesigntest.customUi.ByRoomBackgroundOff
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/viewBRoomOff"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="By Room"
+                        android:textSize="17sp"
+                        android:fontFamily="@font/esscextrabold"
+                        android:textColor="@color/buttonTextColor"
+                        android:layout_centerInParent="true"/>
+
+                </RelativeLayout>
+                <RelativeLayout
+                    android:layout_width="170dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="-10dp">
+
+                    <com.aungbophyoe.space.uidesigntest.customUi.ByRateBackgroundOff
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:visibility="visible"
+                        android:id="@+id/viewBROff"
+                        />
+                    <com.aungbophyoe.space.uidesigntest.customUi.ByRateBackgroundOn
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:visibility="gone"
+                        android:id="@+id/viewBROn"
+                        />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="By Rates"
+                        android:textSize="17sp"
+                        android:fontFamily="@font/esscextrabold"
+                        android:textColor="@color/buttonTextColor"
+                        android:layout_centerInParent="true"/>
+
+                </RelativeLayout>
+            </LinearLayout>
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
