--- a/app/src/main/res/layout/image_container.xml
+++ b/app/src/main/res/layout/image_container.xml
@@ -6,6 +6,7 @@
 
     <ImageView
         android:id="@+id/ivImage"
+        android:visibility="visible"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="fitXY"
